--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,4 @@
-<header>
-  <nav>
-    <a [routerLink]="['']">Home</a>
-    <a [routerLink]="['about']">About</a>
-  </nav>
-</header>
 <main>
-  <h1>Hello from {{api.title}}!</h1>
-
+  <h1>Rock Paper Scissors</h1>
   <router-outlet></router-outlet>
 </main>
