--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
+<header>
+  <nav>
+    <a [routerLink]="['humanVsComp']" routerLinkActive="active">Human vs. Computer</a>
+    <a [routerLink]="['compVsComp']" routerLinkActive="active">Computer vs. Computer</a>
+  </nav>
+</header>
 <main>
   <h1>Rock Paper Scissors</h1>
   <router-outlet></router-outlet>
