--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,10 +11,20 @@ header {
   left: 0;
   width: 100%;
   box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.5);
+  a {
+    display: inline-block;
+    padding: 5px 20px;
+    text-decoration: none;  
+  }
+  .active {
+    background-color: #eee;
+  }
 }
 
 main {
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
   display: block;
+  padding-top: 50px;
 }
+
